fix: table actions vertical align

--- a/src/components/common/EnhancedTable/styles.module.css
+++ b/src/components/common/EnhancedTable/styles.module.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-.actions {
+.actions > div {
   display: flex;
   justify-content: flex-end;
   align-items: center;
